# libslpk

./: README.md
slpk/: CMakeLists.txt  reader.cpp  reader.hpp  restapi.hpp  types.hpp  writer.cpp  writer.hpp
slpk/detail/: files.hpp
slpk/tools/: CMakeLists.txt  slpk2obj.cpp
